fix: message input position on mobile devices

--- a/src/app/component/message-detail/message-detail.component.css
+++ b/src/app/component/message-detail/message-detail.component.css
@@ -1,4 +1,4 @@
-.message-date{
+.message-date {
   font-weight: 1;
   font-size: 10px;
   text-align: center;
@@ -6,19 +6,17 @@
   margin: 0;
 }
 
-.message-date .p{
+.message-date .p {
   margin: 0;
 }
 
 .message-detail {
   width: 100%;
-  float: left;
   height: calc(100vh - 60px);
   display: flex;
   flex-direction: column;
+  position: relative;
 }
-
-
 
 .message-detail .avatar {
   width: 50px;
@@ -37,9 +35,10 @@
 
 .messages {
   flex-grow: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 10px;
-  margin-bottom: 6vh;
+  padding-bottom: 80px;
+  margin-bottom: 0;
 }
 
 .message {
@@ -62,16 +61,17 @@
 }
 
 .message-input {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  position: sticky;
-  height: 7vh;
-  bottom: 0;
+  position: fixed;
+  bottom: 60px;
   left: 0;
   right: 0;
-  padding: 10px;
   background-color: #fff;
+  padding: 10px;
+  box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+  z-index: 1000;
+  display: flex;
+  flex-direction: row;
+  height: 7vh;
 }
 
 .message-input input {
@@ -79,11 +79,10 @@
   width: 75%;
   padding: 10px;
   border: 1px solid #ddd;
-  border-radius: 5px;
+  border-radius: 20px;
   margin-right: 10px;
+  -webkit-appearance: none;
 }
-
-
 
 .message-input button {
   padding: 10px 20px;
@@ -94,8 +93,9 @@
   cursor: pointer;
 }
 
-.nav-container{
-  position: absolute;
+.nav-container {
+  position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 1001;
 }
